# on-policy

./: .gitignore  pyproject.toml
onpolicy/: config.py
onpolicy/algorithms/causality/: causal_weights.py
onpolicy/algorithms/r_mappo/: r_mappo.py
onpolicy/algorithms/r_mappo_mgda/: r_mappo_mgda.py  r_mappo_mult_head.py
onpolicy/algorithms/utils/: act.py  cnn.py
onpolicy/envs/gridworld/: gridworld_env.py  plan2.json  plan3.json  plan4.json
onpolicy/envs/magent/: __init__.py  magent_env.py
onpolicy/envs/rware/: warehouse.py
onpolicy/runner/separated/: base_runner.py  gridworld_runner.py  magent_runner.py  mpe_runner.py  rware_runner.py  smac_runner.py
onpolicy/runner/shared/: base_runner.py  gridworld_runner.py  magent_runner.py  matrix_game_runner.py  mpe_runner.py  rware_runner.py
onpolicy/scripts/train/: train_gridworld.py  train_iql_gridworld.py  train_magent.py  train_mpe.py  train_rware.py
onpolicy/scripts/train_gridworld_scripts/: train_all.sh  train_plan1.sh  train_plan1_iql.sh  train_plan1_mgdapp.sh  train_plan1_ns.sh  train_plan1_ns_mappo.sh  train_plan1_ns_mappo_dgn.sh  train_plan1_ns_mgda.sh  train_plan1_ns_mgda_dgn.sh  train_plan1_ns_mgdapp.sh  train_plan1_ns_mgdapp_dgn.sh  train_plan2_ns_mappo.sh  train_plan2_ns_mappo_dgn.sh  train_plan2_ns_mgda.sh  train_plan2_ns_mgda_dgn.sh  train_plan2_ns_mgdapp.sh  train_plan2_ns_mgdapp_dgn.sh  train_plan3_ns_mappo_dgn.sh  train_plan3_ns_mgda.sh  train_plan3_ns_mgda_dgn.sh  train_plan3_ns_mgdapp.sh  train_plan3_ns_mgdapp_dgn.sh  (+3 more)
onpolicy/utils/: min_norm_solvers.py  separated_buffer.py  shared_buffer.py
(+24 files in other folders)
